syntax = "proto3";

package collector;

option go_package = "collector";

// Agent service contains RPCs to implement communication mechanism with qan-agent.
// Namely query metrics, query explain etc.
service Agent {
  // DataInterchange defines duplex communication between Query analytics API and Agent.
  rpc DataInterchange(stream AgentMessage) returns (stream ApiMessage);
}

// AgentMessage contains several Query Classes for one period of time.
message AgentMessage {
  repeated QueryClass query_class = 1;
}

// QueryClass is aggregated message created by qan-agent.
// Contains information about one query selected in defined way from query class in specific period of time.
message QueryClass {
  uint32 id = 1;
  string digest = 2; // md5 of digest_text
  string digest_text = 3; // digest_text - query signature. Query without values.
  // Dimension Group.
  string db_server = 4;
  string db_schema = 5;
  string db_username = 6;
  string client_host = 7;
  map<string, string> labels = 8;
  string agent_uuid = 9;
  int64 period_start = 10;
  uint32 period_length = 11;
  string example = 12;
  // ExampleFormat is formant of query example: real or query without values
  enum ExampleFormat {
    EXAMPLE = 0;
    DIGEST = 1;
  }
  ExampleFormat example_format = 13;
  uint32 is_truncated = 14;
  // ExampleType is a type of query example selected for this query class in given period of time.
  enum ExampleType {
    RANDOM = 0;
    SLOWEST = 1;
    FASTEST = 2;
    WITH_ERROR = 3;
  }
  ExampleType example_type = 15;
  string example_metrics = 16;
  // Metrics.
  uint64 num_query_with_warnings = 17;
  // {code: count }
  map<string, uint64> warnings = 18;
  uint64 num_query_with_errors = 19;
  // {code: count }
  map<string, uint64> errors = 20;
  uint64 num_queries = 21;
  uint32 m_query_time_cnt = 22;
  float m_query_time_sum = 23;
  float m_query_time_min = 24;
  float m_query_time_max = 25;
  float m_query_time_p99 = 26;
  repeated uint32 m_query_time_hg = 27;
  uint32 m_lock_time_cnt = 28;
  float m_lock_time_sum = 29;
  float m_lock_time_min = 30;
  float m_lock_time_max = 31;
  float m_lock_time_p99 = 32;
  repeated float m_lock_time_hg = 33;
  uint64 m_rows_sent_cnt = 34;
  uint64 m_rows_sent_sum = 35;
  uint64 m_rows_sent_min = 36;
  uint64 m_rows_sent_max = 37;
  uint64 m_rows_sent_p99 = 38;
  repeated uint64 m_rows_sent_hg = 39;
  uint64 m_rows_examined_cnt = 40;
  uint64 m_rows_examined_sum = 41;
  uint64 m_rows_examined_min = 42;
  uint64 m_rows_examined_max = 43;
  uint64 m_rows_examined_p99 = 44;
  repeated uint64 m_rows_examined_hg = 45;
  uint64 m_rows_affected_cnt = 46;
  uint64 m_rows_affected_sum = 47;
  uint64 m_rows_affected_min = 48;
  uint64 m_rows_affected_max = 49;
  uint64 m_rows_affected_p99 = 50;
  repeated uint64 m_rows_affected_hg = 51;
  uint64 m_rows_read_cnt = 52;
  uint64 m_rows_read_sum = 53;
  uint64 m_rows_read_min = 54;
  uint64 m_rows_read_max = 55;
  uint64 m_rows_read_p99 = 56;
  repeated uint64 m_rows_read_hg = 57;
  uint64 m_merge_passes_cnt = 58;
  uint64 m_merge_passes_sum = 59;
  uint64 m_merge_passes_min = 60;
  uint64 m_merge_passes_max = 61;
  uint64 m_merge_passes_p99 = 62;
  repeated uint64 m_merge_passes_hg = 63;
  uint64 m_innodb_io_r_ops_cnt = 64;
  uint64 m_innodb_io_r_ops_sum = 65;
  uint64 m_innodb_io_r_ops_min = 66;
  uint64 m_innodb_io_r_ops_max = 67;
  uint64 m_innodb_io_r_ops_p99 = 68;
  repeated uint64 m_innodb_io_r_ops_hg = 69;
  uint64 m_innodb_io_r_bytes_cnt = 70;
  uint64 m_innodb_io_r_bytes_sum = 71;
  uint64 m_innodb_io_r_bytes_min = 72;
  uint64 m_innodb_io_r_bytes_max = 73;
  uint64 m_innodb_io_r_bytes_p99 = 74;
  repeated uint64 m_innodb_io_r_bytes_hg = 75;
  float m_innodb_io_r_wait_cnt = 76;
  float m_innodb_io_r_wait_sum = 77;
  float m_innodb_io_r_wait_min = 78;
  float m_innodb_io_r_wait_max = 79;
  float m_innodb_io_r_wait_p99 = 80;
  repeated float m_innodb_io_r_wait_hg = 81;
  float m_innodb_rec_lock_wait_cnt = 82;
  float m_innodb_rec_lock_wait_sum = 83;
  float m_innodb_rec_lock_wait_min = 84;
  float m_innodb_rec_lock_wait_max = 85;
  float m_innodb_rec_lock_wait_p99 = 86;
  repeated float m_innodb_rec_lock_wait_hg = 87;
  float m_innodb_queue_wait_cnt = 88;
  float m_innodb_queue_wait_sum = 89;
  float m_innodb_queue_wait_min = 90;
  float m_innodb_queue_wait_max = 91;
  float m_innodb_queue_wait_p99 = 92;
  repeated float m_innodb_queue_wait_hg = 93;
  uint64 m_innodb_pages_distinct_cnt = 94;
  uint64 m_innodb_pages_distinct_sum = 95;
  uint64 m_innodb_pages_distinct_min = 96;
  uint64 m_innodb_pages_distinct_max = 97;
  uint64 m_innodb_pages_distinct_p99 = 98;
  repeated uint64 m_innodb_pages_distinct_hg = 99;
  uint64 m_query_length_cnt = 100;
  uint64 m_query_length_sum = 101;
  uint64 m_query_length_min = 102;
  uint64 m_query_length_max = 103;
  uint64 m_query_length_p99 = 104;
  repeated uint64 m_query_length_hg = 105;
  uint64 m_bytes_sent_cnt = 106;
  uint64 m_bytes_sent_sum = 107;
  uint64 m_bytes_sent_min = 108;
  uint64 m_bytes_sent_max = 109;
  uint64 m_bytes_sent_p99 = 110;
  repeated uint64 m_bytes_sent_hg = 111;
  uint64 m_tmp_tables_cnt = 112;
  uint64 m_tmp_tables_sum = 113;
  uint64 m_tmp_tables_min = 114;
  uint64 m_tmp_tables_max = 115;
  uint64 m_tmp_tables_p99 = 116;
  repeated uint64 m_tmp_tables_hg = 117;
  uint64 m_tmp_disk_tables_cnt = 118;
  uint64 m_tmp_disk_tables_sum = 119;
  uint64 m_tmp_disk_tables_min = 120;
  uint64 m_tmp_disk_tables_max = 121;
  uint64 m_tmp_disk_tables_p99 = 122;
  repeated uint64 m_tmp_disk_tables_hg = 123;
  uint64 m_tmp_table_sizes_cnt = 124;
  uint64 m_tmp_table_sizes_sum = 125;
  uint64 m_tmp_table_sizes_min = 126;
  uint64 m_tmp_table_sizes_max = 127;
  uint64 m_tmp_table_sizes_p99 = 128;
  repeated uint64 m_tmp_table_sizes_hg = 129;
  uint64 m_qc_hit_sum = 130;
  uint64 m_full_scan_sum = 131;
  uint64 m_full_join_sum = 132;
  uint64 m_tmp_table_sum = 133;
  uint64 m_tmp_table_on_disk_sum = 134;
  uint64 m_filesort_sum = 135;
  uint64 m_filesort_on_disk_sum = 136;
  uint64 m_select_full_range_join_sum = 137;
  uint64 m_select_range_sum = 138;
  uint64 m_select_range_check_sum = 139;
  uint64 m_sort_range_sum = 140;
  uint64 m_sort_rows_sum = 141;
  uint64 m_sort_scan_sum = 142;
  uint64 m_no_index_used_sum = 143;
  uint64 m_no_good_index_used_sum = 144;
  string grpstr = 145;
  uint32 grpint = 146;
  map<uint32, uint32> labint = 147;
}

message ApiMessage {
  uint32 saved_amount = 2; // how many query classes ware saved.
}
